--- a/src/app/domains/account/components/full-balance-info-card/full-balance-info-card.component.html
+++ b/src/app/domains/account/components/full-balance-info-card/full-balance-info-card.component.html
@@ -3,5 +3,5 @@
   [textColor]="'text-blue' | classToHexColor"
   [iconName]="'equal-sign'"
   [primaryText]="fullBalance$ | async | numberSpace | currencySymbol"
-  [secondaryText]="'dashboard.infoCards.fullBalance' | translate"
+  [secondaryText]="'account.fullBalance' | translate"
 ></app-info-card>
