--- a/src/app/domains/activity-log/components/categories-reset-record/categories-reset-record.component.html
+++ b/src/app/domains/activity-log/components/categories-reset-record/categories-reset-record.component.html
@@ -1,4 +1,4 @@
-@let content = 'dashboard.activityLog.categoriesResetRecord.' + record.budgetType | translate;
+@let content = 'activityLog.categoriesResetRecord.' + record.budgetType | translate;
 
 <app-generic-activity-log-record [icon]="record.icon" [date]="record.date">
   <span
