--- a/src/app/domains/activity-log/components/currency-change-record/currency-change-record.component.html
+++ b/src/app/domains/activity-log/components/currency-change-record/currency-change-record.component.html
@@ -1,7 +1,7 @@
 <app-generic-activity-log-record [icon]="record.icon" [date]="record.date">
   <div class="flex flex-col font-main text-charcoal text-base overflow-hidden">
     <span>
-      {{ 'dashboard.activityLog.currencyChangeRecord' | translate }}
+      {{ 'activityLog.currencyChangeRecord' | translate }}
     </span>
 
     <div class="flex items-center font-bold text-blue text-sm gap-x-2">
