--- a/src/app/domains/category/components/current-month-balance-info-card/current-month-balance-info-card.component.html
+++ b/src/app/domains/category/components/current-month-balance-info-card/current-month-balance-info-card.component.html
@@ -6,5 +6,5 @@
   [textColor]="colorClasses?.text | classToHexColor"
   [iconName]="'calendar-dot-grid'"
   [primaryText]="currentMonthBalance | numberSpace | currencySymbol"
-  [secondaryText]="'dashboard.infoCards.currentMonthBalance' | translate"
+  [secondaryText]="'category.infoCards.currentMonthBalance' | translate"
 ></app-info-card>
