--- a/src/app/domains/category/components/expense-info-card/expense-info-card.component.html
+++ b/src/app/domains/category/components/expense-info-card/expense-info-card.component.html
@@ -3,5 +3,5 @@
   [textColor]="'text-dark-red' | classToHexColor"
   [iconName]="'arrow-down'"
   [primaryText]="expense$ | async | numberSpace | currencySymbol"
-  [secondaryText]="'dashboard.infoCards.expense' | translate"
+  [secondaryText]="'category.infoCards.expense' | translate" 
 ></app-info-card>
