--- a/src/app/domains/category/components/income-info-card/income-info-card.component.html
+++ b/src/app/domains/category/components/income-info-card/income-info-card.component.html
@@ -3,5 +3,5 @@
   [textColor]="'text-dark-green' | classToHexColor"
   [iconName]="'arrow-up'"
   [primaryText]="income$ | async | numberSpace | currencySymbol"
-  [secondaryText]="'dashboard.infoCards.income' | translate"
+  [secondaryText]="'category.infoCards.income' | translate"
 ></app-info-card>
