--- a/src/app/domains/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/domains/activity-log/components/activity-log/activity-log.component.html
@@ -1,10 +1,10 @@
 @let isEmpty = isEmpty$ | async;
 
-<app-page-header class="text-xl bg-transparent" [title]="'dashboard.activityLog.title' | translate">
+<app-page-header class="text-xl bg-transparent" [title]="'activityLog.title' | translate">
   @if (!isEmpty) {
     <app-button
       customTooltip
-      [tooltipText]="'dashboard.activityLog.removeButtonTooltip' | translate"
+      [tooltipText]="'activityLog.removeButtonTooltip' | translate"
       [position]="['left']"
       [iconName]="'delete-bin'"
       (click)="openRemoveConfirmationModal()"
@@ -21,7 +21,7 @@
 >
   @if (isEmpty) {
     <span class="font-main font-bold text-charcoal text-lg text-center">
-      {{ 'dashboard.activityLog.emptyStateText' | translate }}
+      {{ 'activityLog.emptyStateText' | translate }}
     </span>
   } @else {
     <cdk-virtual-scroll-viewport itemSize="66" class="h-full w-full !overflow-x-hidden">
