--- a/src/app/modules/design-system/components/snackbar/snackbar.component.html
+++ b/src/app/modules/design-system/components/snackbar/snackbar.component.html
@@ -2,7 +2,7 @@
 
 <app-button
   class="min-w-fit"
-  [colorScheme]="'green'"
+  [colorScheme]="buttonColorScheme"
   [buttonSizeX]="'auto'"
   [buttonSizeY]="'small'"
   [text]="data.buttonText"
