design system changes

--- a/src/app/domains/account/components/edit-account-value-modal/edit-account-value-modal.component.html
+++ b/src/app/domains/account/components/edit-account-value-modal/edit-account-value-modal.component.html
@@ -29,7 +29,7 @@
 
 <ng-template #footer>
   <app-button
-    [buttonSizeX]="'big'"
+    [buttonSizeX]="'px160'"
     [colorScheme]="'charcoal'"
     [text]="'account.editAccountValueModal.editButton' | translate"
     [disabled]="isSubmitButtonDisabled"
