--- a/src/app/domains/account/components/move-money-between-accounts-modal/move-money-between-accounts-modal.component.html
+++ b/src/app/domains/account/components/move-money-between-accounts-modal/move-money-between-accounts-modal.component.html
@@ -55,7 +55,7 @@
   <app-button
     [colorScheme]="'charcoal'"
     [text]="'account.moneyMovementBetweenAccountsModal.moveButton' | translate"
-    [buttonSizeX]="'big'"
+    [buttonSizeX]="'px160'"
     [disabled]="form?.invalid"
     [loading]="loading$ | async"
     (click)="submitAction()"
