--- a/src/app/domains/activity-log/components/generic-activity-log-record/generic-activity-log-record.component.html
+++ b/src/app/domains/activity-log/components/generic-activity-log-record/generic-activity-log-record.component.html
@@ -18,8 +18,8 @@
   <app-button
     [iconName]="'close'"
     [colorScheme]="'transparent-dark'"
-    [buttonSizeY]="'tiny'"
-    [buttonSizeX]="'tiny'"
+    [buttonSizeY]="'px28'"
+    [buttonSizeX]="'px28'"
     (click)="removeButtonClick()"
   ></app-button>
 }
