--- a/src/app/domains/auth/components/login-button/login-button.component.html
+++ b/src/app/domains/auth/components/login-button/login-button.component.html
@@ -2,7 +2,7 @@
   [iconName]="'google'"
   [colorScheme]="'green'"
   [text]="'Sign in with Google'"
-  [buttonSizeX]="'large'"
+  [buttonSizeX]="'px240'"
   [loading]="loading$ | async"
   (click)="login()"
 ></app-button>
