--- a/src/app/domains/category/components/add-category-modal/add-category-modal.component.html
+++ b/src/app/domains/category/components/add-category-modal/add-category-modal.component.html
@@ -31,7 +31,7 @@
   <app-button
     [colorScheme]="'charcoal'"
     [text]="'category.addCategoryModal.addCategory' | translate"
-    [buttonSizeX]="'big'"
+    [buttonSizeX]="'px160'"
     [disabled]="this.form?.invalid"
     [loading]="loading$ | async"
     (click)="submitClick()"
