--- a/src/app/modules/design-system/components/button/_button-size.scss
+++ b/src/app/modules/design-system/components/button/_button-size.scss
@@ -1,17 +1,17 @@
 $size-map-w: (
-  tiny-x: 7,
-  small-x: 8,
-  medium-x: 9,
+  px28-x: 7,
+  px32-x: 8,
+  px36-x: 9,
   px100-x: 25,
-  big-x: 40,
-  large-x: 60,
+  px160-x: 40,
+  px240-x: 60,
   full-x: full,
   auto-x: auto,
 );
 $size-map-h: (
-  tiny-y: 7,
-  small-y: 8,
-  medium-y: 9,
+  px28-y: 7,
+  px32-y: 8,
+  px36-y: 9,
   auto-y: auto,
 );
 
