--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -5,7 +5,7 @@
   [buttonSizeY]="buttonSizeY"
   [buttonSizeX]="buttonSizeX"
   [text]="text"
-  [disabled]="menuDisabled"
+  [disabled]="disabled"
   [loading]="loading"
   [shouldUseCurrentColor]="shouldUseCurrentColor"
   (click)="toggleDropdown()"
