--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -13,7 +13,7 @@
     [dontDisplayOnScreenWidth]="true"
     [iconName]="item.iconName"
     [colorScheme]="routerLinkActive.isActive ? 'active-navigation-item' : 'transparent-light'"
-    [buttonSizeY]="'medium'"
-    [buttonSizeX]="'medium'"
+    [buttonSizeY]="'px36'"
+    [buttonSizeX]="'px36'"
   ></app-button>
 </a>
