--- a/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
+++ b/src/app/modules/statistics/components/snapshot-item/snapshot-item.component.html
@@ -23,7 +23,7 @@
         'justify-end': $index % 2 === 1,
       }"
     >
-      <svg-icon [iconName]="metric.icon" [iconSize]="'small'"></svg-icon>
+      <svg-icon [iconName]="metric.icon" [iconSize]="'20px'"></svg-icon>
 
       <span>
         @if ($index === 4) {
