--- a/src/app/domains/account/components/add-account-modal/add-account-modal.component.html
+++ b/src/app/domains/account/components/add-account-modal/add-account-modal.component.html
@@ -70,7 +70,7 @@
   <app-button
     [colorScheme]="'charcoal'"
     [text]="'account.addAccountModal.addAccount' | translate"
-    [buttonSizeX]="'big'"
+    [buttonSizeX]="'px160'"
     [disabled]="!isFormValid"
     [loading]="loading$ | async"
     (click)="submitClick()"
