--- a/src/app/pages/auth/components/auth-page/auth-page.component.html
+++ b/src/app/pages/auth/components/auth-page/auth-page.component.html
@@ -1,3 +1,3 @@
-<svg-icon class="h-25" [iconName]="'app-logo'" [iconSize]="'large'"></svg-icon>
+<svg-icon class="h-25 w-full max-w-96 px-6" [iconName]="'app-logo'" [iconSize]="null"></svg-icon>
 
 <app-login-button></app-login-button>
